<?xml version="1.0" encoding="utf-8"?>
<de.manuel_joswig.socialoon.util.NonFocusingScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:focusable="true"
	    android:focusableInTouchMode="true"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="50dp"
        android:paddingStart="50dp"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp" >

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
        	android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
            	android:id="@+id/tv_username_signup"
            	android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/username_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_username_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#d9d9d9"
                android:padding="5dp"
                android:textSize="15sp" >

            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/tv_email_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/email_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_email_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#d9d9d9"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/tv_password_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/password_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
           	android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

           	<EditText
           	    android:id="@+id/et_password_signup"
           	    android:layout_width="wrap_content"
           	    android:layout_height="wrap_content"
           	    android:background="#d9d9d9"
           	    android:inputType="textPassword"
           	    android:padding="5dp"
           	    android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/tv_password_repeat_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/password_repeat_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_password_repeat_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#d9d9d9"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:onClick="registerUser"
                android:text="@string/register_label" />

        </TableRow>

    </TableLayout>

</de.manuel_joswig.socialoon.util.NonFocusingScrollView>
